fixed current trades overflow sizing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,7 +86,9 @@
     content: '\f106';
 }
 
-body  {background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+body  {
+    overflow-x: hidden;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 background-size: 400% 400%;
 animation: gradient 15s ease infinite;
 }
